--- a/src/index.css
+++ b/src/index.css
@@ -2,3 +2,7 @@
   background-color: hotpink; /* Couleur d'arrière-plan personnalisée */
   color: wheat; /* Couleur du texte personnalisée */
 }
+.custom-card {
+  padding: 0; /* Supprime le padding autour du contenu */
+  /* Autres styles personnalisés pour la carte */
+}
