modified:   src/App.jsx 	modified:   src/components/Header.jsx 	modified:   src/index.css 	modified:   src/pages/List.jsx 	modified:   src/pages/Map.jsx

--- a/src/index.css
+++ b/src/index.css
@@ -1,8 +1,9 @@
-.navbar-custom {
-  background-color: hotpink; /* Couleur d'arrière-plan personnalisée */
-  color: wheat; /* Couleur du texte personnalisée */
-}
 .custom-card {
   padding: 0; /* Supprime le padding autour du contenu */
   /* Autres styles personnalisés pour la carte */
+}
+#root {
+  width: 100vw;
+  height: 100vh;
+  padding: 0;
 }
